--- a/public/Index.html
+++ b/public/Index.html
@@ -13,7 +13,9 @@
         <div class="form-container">
             <h1>Sign Up</h1>
             <form id="userForm">
-                <div id="successMessage" style="color: green; display: none; text-align: center; font-size: 18px; font-style: italic; font-weight: 600; margin-bottom: 15px;"></div>
+                <div id="successMessage" style="color: green; display: none; text-align: center; font-size: 18px; font-style: italic; font-weight: 600; margin-bottom: 15px;">
+                    You have succesfully signed up. <a href="./Login.html">click here</a> to Login
+                </div>
                 
                 <div class="nameinput form-control">
                     <div>
@@ -46,13 +48,7 @@
                     <button type="submit" id="Submit">Sign Up</button>
                 </div>
 
-                    <div class="useractivity">
-                        <h2>User Activity:</h2>
-                        <div class="inputtracking">
-
-                        </div>
-
-                    </div>
+                    
             </form>
         </div>
     </div>
